--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "openai": "^4.23.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0"
   },
